Fix sliders not showing properly on Chrome

--- a/resources/public/css/themes.css
+++ b/resources/public/css/themes.css
@@ -55,7 +55,10 @@
     background: gray;
 }
 
-.volume-control::-moz-range-thumb,
+.volume-control::-moz-range-thumb {
+    background: #48c774;
+}
+
 .volume-control::-webkit-slider-thumb {
     background: #48c774;
 }
